# ai-life-coach

./: INTEGRATION_GUIDE.md  demo.py  pyproject.toml  test_integration.py
.github/: copilot-instructions.md
.github/prompts/: MsgStructure.prompt.md  从交互流程中寻找优化点和Bug.prompt.md  项目背景介绍.prompt.md
src/ai_life_coach/: cli.py
src/ai_life_coach/prompts/: README.md  example_usage.py  prompt_main.py  tool_format.py  tool_manager.py
