[project]
name = "ai-life-coach"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxiee",email = "maxieewong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.88.0,<2.0.0)",
]

[project.scripts]
alc = "ai_life_coach.cli:main"

[tool.poetry]
packages = [{include = "ai_life_coach", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
